# fatbuilder

./: .gitignore  CMakeLists.txt  FATFilesystem.cpp  FATFilesystem.h  FATFilesystemLayout.cpp  FATFilesystemLayout.h  FilesystemTree.cpp  FilesystemTree.h  IBlockDevice.cpp  IBlockDevice.h  IFile.cpp  IFile.h  IFilesystem.cpp  IFilesystem.h  Inode.cpp  Inode.h  RawBlockDevice.cpp  RawBlockDevice.h  StringUtils.cpp  StringUtils.h  WindowsHandle.h  WindowsResources.cpp  WindowsResources.h  main.cpp  resources.rc
